# dbot

./: .gitignore  README.md  pyproject.toml  run.py
dbot/: __init__.py  __main__.py  gateway.py
dbot/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
dbot/agent/tools/: __init__.py  base.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
dbot/bus/: __init__.py  events.py  queue.py
dbot/channels/: __init__.py  base.py  feishu.py  manager.py
dbot/config/: __init__.py  loader.py  schema.py
dbot/cron/: __init__.py  service.py  types.py
dbot/heartbeat/: __init__.py  service.py
dbot/providers/: __init__.py  base.py  custom_provider.py  litellm_provider.py  registry.py  transcription.py
dbot/session/: __init__.py  manager.py
dbot/skills/: README.md
dbot/skills/clawhub/: SKILL.md
dbot/skills/cron/: SKILL.md
dbot/skills/github/: SKILL.md
dbot/skills/memory/: SKILL.md
dbot/skills/skill-creator/: SKILL.md
dbot/skills/summarize/: SKILL.md
dbot/skills/tmux/: SKILL.md
dbot/skills/tmux/scripts/: find-sessions.sh  wait-for-text.sh
dbot/skills/weather/: SKILL.md
dbot/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md  __init__.py
dbot/templates/memory/: MEMORY.md  __init__.py
dbot/utils/: __init__.py  helpers.py
